MDEV-11958: LEFT JOIN with stored routine produce incorrect result

Added forgoten method of Item_func_sp to make it correctly work with LEFT/RIGHT JOIN.