sql/item_func.h
@@ -2091,6 +2091,7 @@ public:
   {
     return TRUE;
   }
+  table_map not_null_tables() const { return 0; }
 };
 
 
